# indexer

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
scripts/: decode-walrus-blob.mjs  package-lock.json  package.json
src/: api.rs  archive.rs  config.rs  coordinator.rs  db.rs  main.rs
