[package]
name = "pinaivu-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pinaivu-indexer"
path = "src/main.rs"

[dependencies]
axum            = "0.8"
tokio           = { version = "1", features = ["full"] }
tower-http      = { version = "0.6", features = ["cors", "trace"] }
sqlx            = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio-native-tls"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
ciborium        = "0.2"
reqwest         = { version = "0.12", features = ["json"] }
uuid            = { version = "1", features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
anyhow          = "1"
thiserror       = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy         = "0.15"
tokio-cron-scheduler = "0.13"

[profile.release]
lto           = true
codegen-units = 1
panic         = "abort"
